--- a/css/style.scss
+++ b/css/style.scss
@@ -11,7 +11,7 @@ $fontColor: #FFFFFF;
 $subColor: #93A8AC;
 $mailColor: #51CA51;
 $fbColor: #4d77b4;
-$twitterColor: #57c7f6;
+$twitterColor: #5cbae1;
 
 
 html{ font-size: 62.5%; }
